feature: add file header to all generated files (#337)